--- a/src/index.html
+++ b/src/index.html
@@ -2,14 +2,14 @@
 <html lang="de">
 <head>
   <meta charset="utf-8">
-  <title>Real Starter App</title>
+  <title>Staxter</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="assets/images/real-favicon.ico">
+  <link rel="icon" type="image/x-icon" href="assets/images/staxter-favicon.ico">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
-  <real-app></real-app>
+  <staxter-app></staxter-app>
 </body>
 </html>
